Fix asset paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
   content="RISKMANCER 思維風險管理顧問提供企業風險管理、資訊安全、危機處理、虛擬資安長 vCISO 與 AI 資料治理顧問服務，協助組織建立韌性、強化治理並提升永續競爭力。">
-  <link rel="shortcut icon" type="image/png" href="/assets/images/logos/favicon.svg" />
-  <link rel="stylesheet" href="/assets/libs/owl.carousel/dist/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="/assets/libs/aos-master/dist/aos.css">
-  <link rel="stylesheet" href="/assets/css/styles.css" />
-  <link rel="stylesheet" href="/assets/css/font-zh-tw.css" />
+  <link rel="shortcut icon" type="image/png" href="assets/images/logos/favicon.svg" />
+  <link rel="stylesheet" href="assets/libs/owl.carousel/distassets/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/libs/aos-master/dist/aos.css">
+  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/font-zh-tw.css" />
 </head>
 
 <body>
@@ -22,10 +22,10 @@
       <div class="header-wrapper d-flex align-items-center justify-content-between">
         <div class="logo">
           <a href="/" class="logo-white">
-            <img src="/assets/images/logos/logo-white.svg" alt="logo" class="img-fluid">
+            <img src="assets/images/logos/logo-white.svg" alt="logo" class="img-fluid">
           </a>
           <a href="/" class="logo-dark">
-            <img src="/assets/images/logos/logo-white.svg" alt="logo" class="img-fluid">
+            <img src="assets/images/logos/logo-white.svg" alt="logo" class="img-fluid">
           </a>
         </div>
         <div class="d-flex align-items-center gap-4">
@@ -34,15 +34,15 @@
          <div class="d-none d-md-block d-md-flex align-items-center gap-6">
                       <a  href="#services" 
                           class="header-link hstack gap-2 text-white body2 fw-m">
-                          <img src="/assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
+                          <img src="assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
                           class="img-fluid animate-spin">服務及解決方案</a>
                       <a href="#about" 
                          class="header-link hstack gap-2 text-white body2 fw-m">
-                         <img src="/assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
+                         <img src="assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
                           class="img-fluid animate-spin">關於我們</a>
                       <a href="#contact" 
                          class="header-link hstack gap-2 text-white body2 fw-m">
-                         <img src="/assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
+                         <img src="assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
                           class="img-fluid animate-spin">聯絡我們</a>
           </div>
 
@@ -64,23 +64,23 @@
                     <li class="header-item">
                       <a href="/" aria-current="true"
                         class="header-link active hstack gap-2 fs-7 fw-bold text-primary"><img
-                          src="/assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
+                          src="assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
                           class="img-fluid animate-spin">Home</a>
                     </li>
                     <li class="header-item">
                       <a  href="#services" 
                           class="header-link hstack gap-2 fs-7 fw-bold text-dark"><img
-                          src="/assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
+                          src="assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
                           class="img-fluid animate-spin">服務及解決方案</a>
                     </li>
                     <li class="header-item">
                       <a href="#about" class="header-link hstack gap-2 fs-7 fw-bold text-dark"><img
-                          src="/assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
+                          src="assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
                           class="img-fluid animate-spin">關於我們</a>
                     </li>
                     <li class="header-item">
                       <a href="#contact" class="header-link hstack gap-2 fs-7 fw-bold text-dark"><img
-                          src="/assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
+                          src="assets/images/svgs/icon-symbol.svg" alt="" width="20" height="20"
                           class="img-fluid animate-spin">聯絡我們</a>
                     </li>
                 </div>
@@ -102,18 +102,18 @@
     <!--  Banner Section -->
     <section class="banner-section position-relative d-flex align-items-end min-vh-100 pd-l-24">
       <video class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover" autoplay muted loop playsinline>
-        <source src="/assets/images/backgrounds/banner-video.mp4" type="video/mp4" />
+        <source src="assets/images/backgrounds/banner-video.mp4" type="video/mp4" />
       </video>
       <div class="container">
         <div class="d-flex flex-column gap-4 pb-8 position-relative z-1">
           <div class="row align-items-center">
             <div class="d-flex align-items-end gap-3" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-              <img src="/assets/images/logos/banner-logo.svg" class="banner-logo img-fluid ">
+              <img src="assets/images/logos/banner-logo.svg" class="banner-logo img-fluid ">
             </div>
 
             <div class="col-xl-4">
               <div class="d-flex align-items-center mt-4">
-                <img src="/assets/images/svgs/primary-leaf.svg" alt="" class="img-fluid">
+                <img src="assets/images/svgs/primary-leaf.svg" alt="" class="img-fluid">
                 <div class="d-flex flex-column flex-md-row align-items-md-end gap-1">
                   <h2 class="mb-0 text-white text-nowrap">
                     &nbsp 超越風險，邁向韌性
@@ -163,19 +163,19 @@
                 <div class="tab-content" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
                   <div class="tab-pane active" id="one" role="tabpanel" aria-labelledby="one-tab" tabindex="0">
                     <div class="service-img-wrapper">
-                    <img src="/assets/images/services/services-img-1.jpg" alt="services" class="img-fluid">
+                    <img src="assets/images/services/services-img-1.jpg" alt="services" class="img-fluid">
                   </div></div>
                   <div class="tab-pane" id="two" role="tabpanel" aria-labelledby="two-tab" tabindex="0">
                     <div class="service-img-wrapper">
-                    <img src="/assets/images/services/services-img-2.jpg" alt="services" class="img-fluid">
+                    <img src="assets/images/services/services-img-2.jpg" alt="services" class="img-fluid">
                   </div></div>
                   <div class="tab-pane" id="three" role="tabpanel" aria-labelledby="three-tab" tabindex="0">
                     <div class="service-img-wrapper">
-                    <img src="/assets/images/services/services-img-3.jpg" alt="services" class="img-fluid">
+                    <img src="assets/images/services/services-img-3.jpg" alt="services" class="img-fluid">
                   </div></div>
                   <div class="tab-pane" id="four" role="tabpanel" aria-labelledby="four-tab" tabindex="0">
                     <div class="service-img-wrapper">
-                    <img src="/assets/images/services/services-img-4.jpg" alt="services" class="img-fluid">
+                    <img src="assets/images/services/services-img-4.jpg" alt="services" class="img-fluid">
                   </div></div>
                 </div>
               </div>
@@ -323,7 +323,7 @@
                   <div class="d-flex flex-column gap-6 pt-9 border-top-primary-300" data-aos="fade-up" data-aos-delay="200"
                     data-aos-duration="1000">
                     <h1 class="mb-0 fs-14 text-light font-roboto"><span class="count" data-target="40">50</span>
-                    <img src="/assets/images/svgs/icon-symbol.svg" alt="about" class="img-fluid"></h1>
+                    <img src="assets/images/svgs/icon-symbol.svg" alt="about" class="img-fluid"></h1>
                     <h4 class="mb-0 text-light fw-m">年產業經驗</h4>
                   </div>
                 </div>
@@ -331,7 +331,7 @@
                   <div class="d-flex flex-column gap-6 pt-9 border-top-primary-300" data-aos="fade-up" data-aos-delay="300"
                     data-aos-duration="1000">
                     <h1 class="mb-0 fs-14 text-light font-roboto"><span class="count" data-target="238">49</span>
-                    <img src="/assets/images/svgs/icon-symbol.svg" alt="about" class="img-fluid"></h1>
+                    <img src="assets/images/svgs/icon-symbol.svg" alt="about" class="img-fluid"></h1>
                     <h4 class="mb-0 text-light fw-m">個人國際證照</h4>
                   </div>
                 </div>
@@ -339,7 +339,7 @@
                   <div class="d-flex flex-column gap-6 pt-9 border-top-primary-300" data-aos="fade-up" data-aos-delay="400"
                     data-aos-duration="1000">
                     <h1 class="mb-0 fs-14 text-light font-roboto"><span class="count" data-target="3">19</span>
-                    <img src="/assets/images/svgs/icon-symbol.svg" alt="about" class="img-fluid"></h1>
+                    <img src="assets/images/svgs/icon-symbol.svg" alt="about" class="img-fluid"></h1>
                     <h4 class="mb-0 text-light fw-m">跨產業成功案例</h4>
                   </div>
                 </div>
@@ -348,7 +348,7 @@
           </div>
         </div>
         <div class="w-100 text-center py-2 mt-9" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
-          <img src="/assets/images/backgrounds/bg-logotype.svg" alt="" class="bg-logotype">
+          <img src="assets/images/backgrounds/bg-logotype.svg" alt="" class="bg-logotype">
         </div>
       </div>
     </section>
@@ -359,7 +359,7 @@
 
         <div class="p-4 pd-b-100">
 
-          <img src="/assets/images/backgrounds/bg-logo.svg" 
+          <img src="assets/images/backgrounds/bg-logo.svg" 
                alt=""
                class="bg-logo pe-none img-fluid">
 
@@ -410,7 +410,7 @@
           <div class="col-12 col-xl-3 mb-8 mb-xl-0">
             <div class="d-flex flex-column align-items-center align-items-xl-start pe-xl-5">
               <div class="logo-footer">
-              <img src="/assets/images/logos/logo-footer.svg" alt="footer"></div>
+              <img src="assets/images/logos/logo-footer.svg" alt="footer"></div>
             </div>
           </div>
 
@@ -440,11 +440,11 @@
   </div>
 
 
-  <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
-  <script src="/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/libs/owl.carousel/dist/owl.carousel.min.js"></script>
-  <script src="/assets/libs/aos-master/dist/aos.js"></script>
-  <script src="/assets/js/custom.js"></script>
+  <script src="assets/libs/jquery/dist/jquery.min.js"></script>
+  <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/libs/owl.carousel/dist/owl.carousel.min.js"></script>
+  <script src="assets/libs/aos-master/dist/aos.js"></script>
+  <script src="assets/js/custom.js"></script>
   <!-- solar icons -->
   <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
