Fix asset paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>RISKMANCER | 思維風險管理顧問股份有限公司</title>
+  <base href="/RISKMANCER/">
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
