--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
   <title>RISKMANCER | 思維風險管理顧問股份有限公司</title>
-  <base href="/RISKMANCER/">
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
   content="RISKMANCER 思維風險管理顧問提供企業風險管理、資訊安全、危機處理、虛擬資安長 vCISO 與 AI 資料治理顧問服務，協助組織建立韌性、強化治理並提升永續競爭力。">
+  
+  <!-- 上線需調整此行 -->
+  <base href="/RISKMANCER/">
+  
   <link rel="shortcut icon" type="image/png" href="assets/images/logos/favicon.svg" />
   <link rel="stylesheet" href="assets/libs/owl.carousel/distassets/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/libs/aos-master/dist/aos.css">
