--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
       </video>
       <div class="container">
         <div class="d-flex flex-column gap-4 pb-8 position-relative z-1">
-          <div class="row align-items-center">
+          <div class="row align-items-center banner-row">
+            
             <div class="d-flex align-items-end gap-3" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
               <img src="assets/images/logos/banner-logo.svg" class="banner-logo img-fluid ">
             </div>
